--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -5,19 +5,33 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.6",
-    "@mui/material": "^5.15.6",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/material": "^5.15.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tiptap/core": "^2.1.16",
+    "@tiptap/core": "^2.2.1",
     "@tiptap/extension-color": "^2.1.16",
-    "@tiptap/extension-heading": "^2.1.16",
-    "@tiptap/extension-image": "^2.1.16",
-    "@tiptap/extension-table": "^2.1.16",
-    "@tiptap/pm": "^2.1.16",
-    "@tiptap/react": "^2.1.16",
-    "@tiptap/starter-kit": "^2.1.16",
+    "@tiptap/extension-font-family": "^2.2.1",
+    "@tiptap/extension-heading": "^2.2.1",
+    "@tiptap/extension-highlight": "^2.2.1",
+    "@tiptap/extension-image": "^2.2.1",
+    "@tiptap/extension-link": "^2.2.1",
+    "@tiptap/extension-mention": "^2.2.1",
+    "@tiptap/extension-placeholder": "^2.2.1",
+    "@tiptap/extension-subscript": "^2.2.1",
+    "@tiptap/extension-superscript": "^2.2.1",
+    "@tiptap/extension-table": "^2.2.1",
+    "@tiptap/extension-table-cell": "^2.2.1",
+    "@tiptap/extension-table-header": "^2.2.1",
+    "@tiptap/extension-table-row": "^2.2.1",
+    "@tiptap/extension-task-item": "^2.2.1",
+    "@tiptap/extension-task-list": "^2.2.1",
+    "@tiptap/extension-text-align": "^2.2.1",
+    "@tiptap/extension-underline": "^2.2.1",
+    "@tiptap/pm": "^2.2.1",
+    "@tiptap/react": "^2.2.1",
+    "@tiptap/starter-kit": "^2.2.1",
     "axios": "^1.6.5",
     "js-cookie": "^3.0.5",
     "mui-tiptap": "^1.8.6",
