--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -36,6 +36,7 @@
     "js-cookie": "^3.0.5",
     "mui-tiptap": "^1.8.6",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
