--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -40,6 +40,7 @@
     "react-avatar-edit": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
