UPDATE Containers ViewListNews, MyProfile. CREATE Containers JWT

--- a/kitchendelights/.env
+++ b/kitchendelights/.env
@@ -1,3 +1,9 @@
 REACT_APP_API_URL_REGISTER=http://localhost:4200/api/User/Register
 REACT_APP_API_URL_LOGIN=http://localhost:4200/api/User/Login
 REACT_APP_API_URL_CREATE_NEWS=http://localhost:4200/api/News/Create
+REACT_APP_API_URL_LIST_NEWS=http://localhost:4200/api/News/List
+
+# Get News by Id
+REACT_APP_NEWS=http://localhost:4200/api/News/Get
+# Get News by Id
+
