--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -35,6 +35,7 @@
     "@tiptap/starter-kit": "^2.2.1",
     "axios": "^1.6.5",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "mui-tiptap": "^1.8.6",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
