--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -34,6 +34,7 @@
     "@tiptap/react": "^2.2.1",
     "@tiptap/starter-kit": "^2.2.1",
     "axios": "^1.6.5",
+    "html-to-react": "^1.7.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "mui-tiptap": "^1.8.6",
