--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -37,6 +37,7 @@
     "html-to-react": "^1.7.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "mui-tiptap": "^1.8.6",
     "react": "^18.2.0",
     "react-avatar-edit": "^1.2.0",
