--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -50,8 +50,10 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "8.2.0",
     "resize-observer-polyfill": "^1.5.1",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
     "web-vitals": "^2.1.4"
   },
