--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -55,7 +55,8 @@
     "resize-observer-polyfill": "^1.5.1",
     "slick-carousel": "^1.8.1",
     "swr": "^2.2.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
