--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -6,7 +6,8 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.12",
+    "@mui/material": "^5.15.14",
+    "@mui/system": "^5.15.14",
     "@mui/x-data-grid": "^6.19.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
