--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -49,6 +49,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^9.0.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-player": "^2.15.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
