--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
+    "@mui/x-charts": "^7.1.0",
     "@mui/x-data-grid": "^6.19.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
