--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
+    "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
     "@mui/x-charts": "^7.1.0",
