--- a/kitchendelights/package.json
+++ b/kitchendelights/package.json
@@ -36,6 +36,7 @@
     "@tiptap/pm": "^2.2.1",
     "@tiptap/react": "^2.2.1",
     "@tiptap/starter-kit": "^2.2.1",
+    "antd": "^5.16.1",
     "axios": "^1.6.5",
     "date-fns": "^3.4.0",
     "dayjs": "^1.11.10",
